<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Habilidades Socio Laborales</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">----</string>
    <string name="next_question">SIGUIENTE PREGUNTA</string>
    <string name="scenarios">ESCENARIOS</string>
    <string name="select_scenario">SELECCIONA UN ESCENARIO</string>
    <string name="last_update">Ultima actualización:&#160;</string>
    <string name="last_update_value">[FECHA]</string>
    <string name="update_data">Actualizar escenarios y preguntas</string>
    <string name="error_reading_database">Ocurrió un error cuando se intentaban leer los escenarios. Por favor actualice sus datos e intente nuevamente.</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="user_answers">Respuestas del alumno </string>
    <string name="select_user">Seleccionar usuario:</string>
    <string name="create_user">Crear usuario</string>
    <string name="sound_on">Activar sonido</string>
    <string name="statistics_and_history">Estadísticas e historial del usuario</string>
    <string name="config">CONFIGURACIÓN</string>
    <string name="sessions">Sesiones del usuario</string>
    <string name="content_description">image</string>
    <string name="user">Usuario</string>
    <string name="see_all">Ver todo</string>
    <string name="name">Nombre:</string>
    <string name="last_name">Apellido:</string>
    <string name="birth_date">Fecha de Nacimiento:</string>
    <string name="upload_photo">Elegir Foto</string>
    <string name="save_user">Guardar Usuario</string>
    <string name="empty_users">No se registran usuarios</string>
    <string name="empty_answers">No se registran respuestas</string>
    <string name="last_question">PREGUNTA ANTERIOR</string>
    <string name="question">PREGUNTA</string>
    <string name="correct_answer">RESPUESTA CORRECTA</string>
    <string name="answer">RESPUESTA</string>
    <string name="date_time">FECHA Y HORA</string>
    <string name="scenario">ESCENARIO</string>
    <string name="session">SESIÓN</string>
    <string name="status">ESTADO</string>
    <string name="date_close">FECHA DE CIERRE</string>
    <string name="percentage">PORCENTAJE</string>
    <string name="delete">ELIMINAR</string>
    <string name="update">EDITAR</string>
    <string name="in_progress">En curso</string>
    <string name="finished">Finalizada</string>
    <string name="sound_off">Desactivar sonido</string>
    <string name="edit_user">Modificar usuario</string>
    <string name="tap_back_again_to_exit">Presiona de nuevo para salir</string>
</resources>
