<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/test_bg"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                tools:context="com.belatrix.habilidadessociolaborales.ui.SettingsActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/config"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/titleTextView"
        android:layout_toRightOf="@+id/titleTextView"
        android:contentDescription="@string/content_description"
        android:src="@drawable/balls"/>

    <RelativeLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lastUpdateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/last_update"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/lastUpdateValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/lastUpdateTextView"
            android:layout_toRightOf="@+id/lastUpdateTextView"
            android:text="@string/last_update_value"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLayout"
        android:background="@color/glass_white"
        android:onClick="updateData">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/update_data"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <ImageButton
            android:id="@+id/updateDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/avatar_green_bg"
            android:contentDescription="@string/content_description"
            android:onClick="updateData"
            android:src="@android:drawable/stat_sys_download"
            android:tint="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/statisticsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refreshLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/glass_white"
        android:onClick="statistics">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/statistics_and_history"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <ImageButton
            android:id="@+id/statisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/avatar_green_bg"
            android:contentDescription="@string/content_description"
            android:onClick="statistics"
            android:src="@android:drawable/btn_star_big_on"
            android:tint="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/soundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statisticsLayout"
        android:background="@color/glass_white"
        android:onClick="sound">

        <TextView
            android:id="@+id/soundTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/sound_on"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <ImageButton
            android:id="@+id/soundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/avatar_green_bg"
            android:contentDescription="@string/content_description"
            android:onClick="sound"
            android:src="@android:drawable/ic_lock_silent_mode"
            android:tint="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aboutBelatrix"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black_overlay"
        android:onClick="aboutBelatrix"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/aboutBelatrixTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:onClick="aboutBelatrix"
            android:src="@drawable/belax_logo_big"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

    </RelativeLayout>
</RelativeLayout>
