<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/test_bg"
                android:padding="10dp">

    <RelativeLayout
        android:id="@+id/logoRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/fund_nos_logo"/>

        <ImageView
            android:id="@+id/ballsImageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toEndOf="@+id/logoImageView"
            android:layout_toRightOf="@+id/logoImageView"
            android:contentDescription="@string/content_description"
            android:src="@drawable/balls"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/addUserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoRelativeLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/createUserButton">

            <TextView
                android:id="@+id/selectUserTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/createUserTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/select_user"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/createUserTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/create_user"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/avatar_bg"
            android:contentDescription="@string/content_description"
            android:src="@android:drawable/ic_menu_myplaces"
            android:tint="#00e2b5"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/usersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addUserLayout"
        android:layout_centerHorizontal="true"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:listSelector="@color/glass_white_opaque"/>
</RelativeLayout>